RESOLVED FIXED267327
[GStreamer][WebRTC] WPT test RTCPeerConnection-setLocalDescription-offer.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=267327
Summary [GStreamer][WebRTC] WPT test RTCPeerConnection-setLocalDescription-offer.html...
Philippe Normand
Reported 2024-01-10 03:18:06 PST
#0 0x00007f49322ed230 in gst_sdp_media_get_attribute_val_n (media=0x2377a30, key=0x7f4939ce6f7e <.L.str.60> "mid", nth=0) at ../gst-libs/gst/sdp/gstsdpmessage.c:2809 2809 for (i = 0; i < media->attributes->len; i++) { Thread 1 (Thread 0x7f492d578bc0 (LWP 1126669)): #0 0x00007f49322ed230 in gst_sdp_media_get_attribute_val_n (media=0x2377a30, key=0x7f4939ce6f7e <.L.str.60> "mid", nth=0) at ../gst-libs/gst/sdp/gstsdpmessage.c:2809 #1 0x00007f493b1da38e in WTF::Detail::CallableWrapper<WebCore::GStreamerMediaEndpoint::onIceCandidate(unsigned int, char*)::$_0, void>::call() () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkit2gtk-4.1.so.0 #2 0x00007f49376bdafb in WTF::RunLoop::performWork() () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-4.1.so.0 #3 0x00007f4937720a96 in WTF::RunLoop::RunLoop()::$_0::__invoke(void*) () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-4.1.so.0 #4 0x00007f493771ffba in WTF::RunLoop::$_0::__invoke(_GSource*, int (*)(void*), void*) () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-4.1.so.0 #5 0x00007f49334f9e5c in g_main_dispatch (context=0x1cf2c00) at ../glib/gmain.c:3476 #6 g_main_context_dispatch_unlocked (context=0x1cf2c00) at ../glib/gmain.c:4284 #7 0x00007f4933554f18 in g_main_context_iterate_unlocked.isra.0 (context=0x1cf2c00, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4349 #8 0x00007f49334fb447 in g_main_loop_run (loop=0x1d1c260) at ../glib/gmain.c:4551 #9 0x00007f4937720578 in WTF::RunLoop::run() () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-4.1.so.0 #10 0x00007f493a5ad7bb in WebKit::WebProcessMain(int, char**) () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkit2gtk-4.1.so.0 #11 0x00007f4932ebc14a in __libc_start_call_main (main=main@entry=0x201800 <main>, argc=argc@entry=4, argv=argv@entry=0x7fff67592d78) at ../sysdeps/nptl/libc_start_call_main.h:58 #12 0x00007f4932ebc20b in __libc_start_main_impl (main=0x201800 <main>, argc=4, argv=0x7fff67592d78, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff67592d68) at ../csu/libc-start.c:360 #13 0x0000000000201735 in _start ()
Attachments
Philippe Normand
Comment 1 2024-01-10 03:34:28 PST
EWS
Comment 2 2024-01-11 04:29:43 PST
Committed 272910@main (2404f7bae653): <https://commits.webkit.org/272910@main> Reviewed commits have been landed. Closing PR #22577 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-01-11 04:30:17 PST
Note You need to log in before you can comment on or make changes to this bug.