[GStreamer][WebRTC] WPT test RTCPeerConnection-setLocalDescription-offer.html is crashing https://bugs.webkit.org/show_bug.cgi?id=267327

Reviewed by Xabier Rodriguez-Calvar.

Check the SDP message contains enough medias before attempting to access the one located at the
given mline index.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::onIceCandidate):

Canonical link: https://commits.webkit.org/272910@main